changes to ui, jorge's changes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Apple</title>
+    <title>ReplAI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="container-bar">
             <nav class="nav">
                 <ul class="nav-list nav-list-mobile">
                     <li class="nav-item">
@@ -33,15 +33,15 @@
                 <!-- nav list and nav list mobile  -->
                 <ul class="nav-list nav-list-larger">
 
+                    <li class="nav-item nav-item-hidden logo-margin">
+                        <img style="height:30px;" src="images/icons/logo-cropped.jpeg">
+                    </li>
+
                     <li class="nav-item">
-                        <a href="#watch" class="nav-link">Bot
+                        <a href="https://discord.com/oauth2/authorize?client_id=1152733313153380482&scope=bot&permission=8" class="nav-link">Add ReplAI
                         </a>
                     </li>
 
-                    <li class="nav-item nav-item-hidden">
-                        <a href="#" class="nav-link nav-link-bag">
-                        </a>
-                    </li>
                 </ul>
                 <!-- nav list nav list larger  -->
             </nav>
@@ -53,29 +53,35 @@
     <section class="hero iphone-12-pro" id="iphone12pro">
         <div class="container">
             <div class="title">
-                <h2 class="title-heading">replAI</h2>
+                <h2 class="title-heading">ReplAI</h2>
                 <h3 class="title-sub-heading">Your Virtual Ambassador</h3>
             </div>
-            <div class="cta">
-                <a href="#" class="cta-link">Learn More</a>
-                <a href="#" class="cta-link">Buy</a>
-            </div>
+            <!-- <div class="cta">
+                <a href="https://discord.com/oauth2/authorize?client_id=1152733313153380482&scope=bot&permission=8" class="cta-link">Add ReplAI to your server</a>
+            </div> -->
         </div>
+        <div class="demo"></div>
     </section>
 
     <div class="b_half">
-        <div class="title title-dark">
-            <h2 class="title-heading">A Virtual Ambassador</h2>
-            <h3 class="title-sub-heading">Your own Discord representative, for when you need one.</h3>
-            <p class="title-price">Powered by generative-AI, this Discord bot allows users to reply to message channels via a virtual assistant on their behalf.<br>
-                replAI learns the speech patterns, diction, and character of its respective user, so that when requested, may provide a response on their behalf.
-                Whether you're too busy to reply or tired of reading messages
-
-            </p>
+        <div>
+            <div class="title-bottom">
+                <h2 class="title-heading title-white">A Virtual Ambassador</h2>
+                <h3 class="title-sub-heading title-red margin-bottom">Your own Discord representative, for when you need one.</h3>
+                <p class="title-price titled-white">Powered by generative-AI, this Discord bot allows users to reply to message channels via a virtual assistant on their behalf.</p>
+                <p class="title-price titled-white">ReplAI learns the speech patterns, diction, and character of its respective user, so that when requested, may provide a response on their behalf.
+                    Whether you're too busy to reply or tired of reading messages.</p>
+            </div>
+            <div class="cta-bottom">
+                <button class="button-40" role="button">
+                    <div style="margin-top: 3px;">
+                        <a href="https://discord.com/oauth2/authorize?client_id=1152733313153380482&scope=bot&permission=8" class="cta-link">Add ReplAI to your server</a>
+                    </div>
+                </button>
+            </div>
         </div>
-        <div class="cta">
-            <a href="#" class="cta-link">Learn More</a>
-            <a href="#" class="cta-link">Buy</a>
+        <div>
+            <img class="title-bottom" src="images/icons/logo.jpeg" alt="logo" class="logo">
         </div>
     </div>
     </div>
