--- a/index.html
+++ b/index.html
@@ -54,23 +54,27 @@
         <div class="container">
             <div class="title">
                 <h2 class="title-heading">ReplAI</h2>
-                <h3 class="title-sub-heading">Your Virtual Ambassador</h3>
+                <h3 class="title-sub-heading title-margin-bottom">Your Virtual Ambassador</h3>
             </div>
             <!-- <div class="cta">
                 <a href="https://discord.com/oauth2/authorize?client_id=1152733313153380482&scope=bot&permission=8" class="cta-link">Add ReplAI to your server</a>
             </div> -->
         </div>
-        <div class="demo"></div>
+        <div class="demo">
+            <video autoplay muted src="images/hero/chats/demo-video-2.mov" width="100%" height="100%"type="video/mov">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </section>
 
     <div class="b_half">
         <div>
             <div class="title-bottom">
-                <h2 class="title-heading title-white">A Virtual Ambassador</h2>
-                <h3 class="title-sub-heading title-red margin-bottom">Your own Discord representative, for when you need one.</h3>
-                <p class="title-price titled-white">Powered by generative-AI, this Discord bot allows users to reply to message channels via a virtual assistant on their behalf.</p>
-                <p class="title-price titled-white">ReplAI learns the speech patterns, diction, and character of its respective user, so that when requested, may provide a response on their behalf.
-                    Whether you're too busy to reply or tired of reading messages.</p>
+                <h2 class="title-heading-bottom title-white">A Virtual Ambassador</h2>
+                <h3 class="title-sub-heading-bottom title-red margin-bottom">Your own Discord representative, for when you need one.</h3>
+                <p class="title-price titled-white">Powered by <span>generative-AI</span>, our Discord bot allows you to reply to message channels via a virtual assistant on your behalf.</p>
+                <p class="title-price titled-white">ReplAI learns your speech patterns, diction, and character<code>&#8212;</code>when requested, it will provide a response on your behalf.
+                    Whether you're too busy to reply or tired of reading messages, use ReplAI to enhance your conversations.</p>
             </div>
             <div class="cta-bottom">
                 <button class="button-40" role="button">
