video loop edits

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div> -->
         </div>
         <div class="demo">
-            <video autoplay muted src="images/hero/chats/demo-video-2.mov" width="100%" height="100%"type="video/mov">
+            <video autoplay muted loop src="images/hero/chats/demo-video-3.mov" width="100%" height="100%"type="video/mov">
                 Your browser does not support the video tag.
             </video>
         </div>
